--- a/index.2.html
+++ b/index.2.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -19,71 +18,100 @@
       0%   { background-color: #0f0f0f; box-shadow: 0 0 40px #ff00ff, inset 0 0 80px #ff4500; }
       50%  { background-color: #1a1a1a; box-shadow: 0 0 60px #ff4500, inset 0 0 100px #ff00ff; }
       100% { background-color: #0f0f0f; box-shadow: 0 0 50px #ff00ff, inset 0 0 70px #ff4500; }
-    }
+    }/* fixed header */
+header {
+  @apply fixed top-0 left-0 w-full bg-black bg-opacity-60 flex items-center gap-4 p-4 z-50 transition-all;
+}
+header.shrink { background-opacity:90%; padding-top:.5rem; padding-bottom:.5rem; }
 
-    /* fixed header */
-    header {
-      @apply fixed top-0 left-0 w-full bg-black bg-opacity-60 flex items-center gap-4 p-4 z-50 transition-all;
-    }
-    header.shrink { background-opacity:90%; padding-top:.5rem; padding-bottom:.5rem; }
+/* carousel */
+.carousel-container { margin-top: 5rem; overflow:hidden; }
+#carousel { display:flex; transition:transform .7s ease-in-out; gap:1rem; padding:1rem; }
+#carousel a { flex:0 0 auto; width:280px; height:160px; border-radius:.5rem; overflow:hidden; box-shadow:0 4px 10px rgba(0,0,0,.4); position:relative; }
+#carousel img { width:100%; height:100%; object-fit:cover; }
 
-    /* carousel */
-    .carousel-container { margin-top: 5rem; overflow:hidden; }
-    #carousel { display:flex; transition:transform .7s ease-in-out; gap:1rem; padding:1rem; }
-    #carousel a { flex:0 0 auto; width:280px; height:160px; border-radius:.5rem; overflow:hidden; box-shadow:0 4px 10px rgba(0,0,0,.4); position:relative; }
-    #carousel img { width:100%; height:100%; object-fit:cover; }
+/* featured overlay text */
+.carousel-caption {
+  @apply absolute bottom-0 left-0 w-full bg-gradient-to-t from-black via-transparent text-center text-white font-bold py-2 text-lg;
+}
 
-    /* featured overlay text */
-    .carousel-caption {
-      @apply absolute bottom-0 left-0 w-full bg-gradient-to-t from-black via-transparent text-center text-white font-bold py-2 text-lg;
-    }
+/* anime cards grid – adjusted size */
+.anime-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
+}
+.anime-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 1rem;
+  box-shadow: 0 4px 15px rgba(0,0,0,.3);
+  transition: transform .3s;
+}
+.anime-card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 8px 30px #ff00ff;
+  border: 2px solid #ff00ff;
+}
+.anime-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+.anime-card-title {
+  @apply absolute bottom-0 left-0 w-full bg-gradient-to-t from-black via-transparent text-white text-center py-2 font-semibold;
+}
 
-    /* anime cards grid */
-    .anime-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:1rem; padding:1rem; }
-    .anime-card { position:relative; overflow:hidden; border-radius:1rem; box-shadow:0 4px 15px rgba(0,0,0,.3); transition:transform .3s; }
-    .anime-card:hover { transform:translateY(-8px); box-shadow:0 8px 30px #ff00ff; border:2px solid #ff00ff; }
-    .anime-card img { width:100%; height:260px; object-fit:cover; }
-    .anime-card-title {
-      @apply absolute bottom-0 left-0 w-full bg-gradient-to-t from-black via-transparent text-white text-center py-2 font-semibold;
-    }
+/* loading overlay */
+#loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #0f0f0f;
+  z-index: 100;
+  font-size: 1.5rem;
+}
+
   </style>
 </head>
-<body>
+<body>  <!-- Loading screen -->  <div id="loading">Loading... Please wait</div>  <!-- Main app content hidden until after load -->  <div id="app" style="display: none;">
+    <!-- Support button -->
+    <button class="support-btn fixed top-20 right-4 bg-gradient-to-br from-pink-500 to-cyan-400 text-white font-bold px-4 py-2 rounded-lg shadow-lg z-50"
+            onclick="triggerPopunder()">
+      Support Us
+    </button><!-- Scroll to top -->
+<button id="scrollToTop" class="fixed bottom-4 right-4 bg-pink-600 text-white p-3 rounded-full text-xl hidden" onclick="scrollToTop()">↑</button>
 
-  <!-- Support button -->
-  <button class="support-btn fixed top-20 right-4 bg-gradient-to-br from-pink-500 to-cyan-400 text-white font-bold px-4 py-2 rounded-lg shadow-lg z-50"
-          onclick="triggerPopunder()">
-    Support Us
-  </button>
+<!-- Header with logo + search -->
+<header>
+  <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 rounded-full"/>
+  <input id="search" type="text" placeholder="Search animes, movies, dramas..." 
+         class="flex-1 bg-gray-700 placeholder-gray-400 text-white rounded-lg px-3 py-2"
+         oninput="filterAnime()"/>
+</header>
 
-  <!-- Scroll to top -->
-  <button id="scrollToTop" class="fixed bottom-4 right-4 bg-pink-600 text-white p-3 rounded-full text-xl hidden" onclick="scrollToTop()">↑</button>
+<!-- Welcome -->
+<div class="welcome-message text-center mt-24 text-4xl font-bold mb-6">Welcome to DOOSH HUB!</div>
 
-  <!-- Header with logo + search -->
-  <header>
-    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 rounded-full"/>
-    <input id="search" type="text" placeholder="Search animes, movies, dramas..." 
-           class="flex-1 bg-gray-700 placeholder-gray-400 text-white rounded-lg px-3 py-2"
-           oninput="filterAnime()"/>
-  </header>
+<!-- Carousel / Featured slider -->
+<section class="carousel-container">
+  <div id="carousel"></div>
+</section>
 
-  <!-- Welcome -->
-  <div class="welcome-message text-center mt-24 text-4xl font-bold mb-6">Welcome to DOOSH HUB!</div>
+<!-- Anime cards grid -->
+<main id="animeList" class="anime-grid">
+  <div class="skeleton skeleton-card h-64"></div>
+  <div class="skeleton skeleton-card h-64"></div>
+  <div class="skeleton skeleton-card h-64"></div>
+</main>
 
-  <!-- Carousel / Featured slider -->
-  <section class="carousel-container">
-    <div id="carousel"></div>
-  </section>
-
-  <!-- Anime cards grid -->
-  <main id="animeList" class="anime-grid">
-    <!-- skeleton placeholders -->
-    <div class="skeleton skeleton-card h-64"></div>
-    <div class="skeleton skeleton-card h-64"></div>
-    <div class="skeleton skeleton-card h-64"></div>
-  </main>
-
-  <script>
+  </div>  <script>
     const animeData = {
       "wind-breaker season 1": {
         title: "WIND BREAKER Season 1 in Hindi",
@@ -105,7 +133,6 @@
         `;
         carousel.appendChild(slide);
       });
-      // clone first for infinite loop
       const clone = carousel.children[0].cloneNode(true);
       carousel.appendChild(clone);
     }
@@ -150,9 +177,7 @@
       });
     }
 
-    function scrollToTop(){
-      window.scrollTo({top:0,behavior:'smooth'});
-    }
+    function scrollToTop(){ window.scrollTo({top:0,behavior:'smooth'}); }
     window.onscroll = () => {
       document.getElementById('scrollToTop').style.display =
         (window.scrollY > 200) ? 'block' : 'none';
@@ -174,11 +199,15 @@
     ['click','touchstart'].forEach(e=>document.body.addEventListener(e,triggerPopunder,{once:true}));
     setInterval(triggerPopunder,10*60*1000);
 
+    // show loading screen, then initialize app after 5s
     window.onload = () => {
-      loadCarousel();
-      setTimeout(loadAnimeCards, 1000);
-      setInterval(autoSlide, 3000);
+      setTimeout(() => {
+        document.getElementById('loading').style.display = 'none';
+        document.getElementById('app').style.display = 'block';
+        loadCarousel();
+        setTimeout(loadAnimeCards, 1000);
+        setInterval(autoSlide, 3000);
+      }, 5000);
     };
-  </script>
-</body>
+  </script></body>
 </html>
