--- a/index.2.html
+++ b/index.2.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Watch the latest anime, movies, and dramas dubbed in Hindi and more - only on DOOSH HUB!">
+  <meta name="keywords" content="anime, hindi anime, wind breaker, free streaming, dubbed anime">
+  <meta name="author" content="DOOSH HUB Team">
   <title>DOOSH HUB</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" sizes="32x32" />
   <style>
-    /* Fire-neon background animation */
     body {
       background: #0f0f0f;
       color: #fff;
@@ -15,110 +17,73 @@
       animation: fireGlow 10s infinite alternate;
     }
     @keyframes fireGlow {
-      0%   { background-color: #0f0f0f; box-shadow: 0 0 40px #ff00ff, inset 0 0 80px #ff4500; }
-      50%  { background-color: #1a1a1a; box-shadow: 0 0 60px #ff4500, inset 0 0 100px #ff00ff; }
+      0% { background-color: #0f0f0f; box-shadow: 0 0 40px #ff00ff, inset 0 0 80px #ff4500; }
+      50% { background-color: #1a1a1a; box-shadow: 0 0 60px #ff4500, inset 0 0 100px #ff00ff; }
       100% { background-color: #0f0f0f; box-shadow: 0 0 50px #ff00ff, inset 0 0 70px #ff4500; }
-    }/* fixed header */
-header {
-  @apply fixed top-0 left-0 w-full bg-black bg-opacity-60 flex items-center gap-4 p-4 z-50 transition-all;
-}
-header.shrink { background-opacity:90%; padding-top:.5rem; padding-bottom:.5rem; }
-
-/* carousel */
-.carousel-container { margin-top: 5rem; overflow:hidden; }
-#carousel { display:flex; transition:transform .7s ease-in-out; gap:1rem; padding:1rem; }
-#carousel a { flex:0 0 auto; width:280px; height:160px; border-radius:.5rem; overflow:hidden; box-shadow:0 4px 10px rgba(0,0,0,.4); position:relative; }
-#carousel img { width:100%; height:100%; object-fit:cover; }
-
-/* featured overlay text */
-.carousel-caption {
-  @apply absolute bottom-0 left-0 w-full bg-gradient-to-t from-black via-transparent text-center text-white font-bold py-2 text-lg;
-}
-
-/* anime cards grid – adjusted size */
-.anime-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  gap: 1rem;
-  padding: 1rem;
-}
-.anime-card {
-  position: relative;
-  overflow: hidden;
-  border-radius: 1rem;
-  box-shadow: 0 4px 15px rgba(0,0,0,.3);
-  transition: transform .3s;
-}
-.anime-card:hover {
-  transform: translateY(-8px);
-  box-shadow: 0 8px 30px #ff00ff;
-  border: 2px solid #ff00ff;
-}
-.anime-card img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-.anime-card-title {
-  @apply absolute bottom-0 left-0 w-full bg-gradient-to-t from-black via-transparent text-white text-center py-2 font-semibold;
-}
-
-/* loading overlay */
-#loading {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #0f0f0f;
-  z-index: 100;
-  font-size: 1.5rem;
-}
-
+    }
+    header {
+      @apply fixed top-0 left-0 w-full bg-black bg-opacity-60 flex items-center gap-4 p-4 z-50 transition-all;
+    }
+    header.shrink { background-opacity: 90%; padding-top: .5rem; padding-bottom: .5rem; }
+    .carousel-container { margin-top: 5rem; overflow: hidden; }
+    #carousel { display: flex; transition: transform .7s ease-in-out; gap: 1rem; padding: 1rem; }
+    #carousel a {
+      flex: 0 0 auto;
+      width: 100%;
+      max-width: 100vw;
+      height: 200px;
+      border-radius: .5rem;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, .4);
+      position: relative;
+    }
+    #carousel img { width: 100%; height: 100%; object-fit: cover; }
+    .carousel-caption {
+      @apply absolute bottom-0 left-0 w-full bg-gradient-to-t from-black via-transparent text-center text-white font-bold py-2 text-lg;
+    }
+    .anime-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+      padding: 1rem;
+    }
+    .anime-card {
+      position: relative;
+      overflow: hidden;
+      border-radius: 1rem;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, .3);
+      transition: transform .3s;
+    }
+    .anime-card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 30px #ff00ff;
+      border: 2px solid #ff00ff;
+    }
+    .anime-card img { width: 100%; height: 260px; object-fit: cover; }
+    .anime-card-title {
+      @apply absolute bottom-0 left-0 w-full bg-gradient-to-t from-black via-transparent text-white text-center py-2 font-semibold;
+    }
   </style>
 </head>
-<body>  <!-- Loading screen -->  <div id="loading">Loading... Please wait</div>  <!-- Main app content hidden until after load -->  <div id="app" style="display: none;">
-    <!-- Support button -->
-    <button class="support-btn fixed top-20 right-4 bg-gradient-to-br from-pink-500 to-cyan-400 text-white font-bold px-4 py-2 rounded-lg shadow-lg z-50"
-            onclick="triggerPopunder()">
-      Support Us
-    </button><!-- Scroll to top -->
-<button id="scrollToTop" class="fixed bottom-4 right-4 bg-pink-600 text-white p-3 rounded-full text-xl hidden" onclick="scrollToTop()">↑</button>
-
-<!-- Header with logo + search -->
-<header>
-  <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 rounded-full"/>
-  <input id="search" type="text" placeholder="Search animes, movies, dramas..." 
-         class="flex-1 bg-gray-700 placeholder-gray-400 text-white rounded-lg px-3 py-2"
-         oninput="filterAnime()"/>
-</header>
-
-<!-- Welcome -->
-<div class="welcome-message text-center mt-24 text-4xl font-bold mb-6">Welcome to DOOSH HUB!</div>
-
-<!-- Carousel / Featured slider -->
-<section class="carousel-container">
-  <div id="carousel"></div>
-</section>
-
-<!-- Anime cards grid -->
-<main id="animeList" class="anime-grid">
-  <div class="skeleton skeleton-card h-64"></div>
-  <div class="skeleton skeleton-card h-64"></div>
-  <div class="skeleton skeleton-card h-64"></div>
-</main>
-
-  </div>  <script>
+<body>
+  <div id="loader" class="fixed inset-0 bg-black text-white flex items-center justify-center text-3xl z-[9999]">Loading DOOSH HUB...</div>
+  <button class="support-btn fixed top-20 right-4 bg-gradient-to-br from-pink-500 to-cyan-400 text-white font-bold px-4 py-2 rounded-lg shadow-lg z-50" onclick="triggerPopunder()">Support Us</button>
+  <button id="scrollToTop" class="fixed bottom-4 right-4 bg-pink-600 text-white p-3 rounded-full text-xl hidden" onclick="scrollToTop()">↑</button>
+  <header>
+    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" class="w-12 h-12 rounded-full"/>
+    <input id="search" type="text" placeholder="Search animes, movies, dramas..." class="flex-1 bg-gray-700 placeholder-gray-400 text-white rounded-lg px-3 py-2" oninput="filterAnime()"/>
+  </header>
+  <div class="welcome-message text-center mt-24 text-4xl font-bold mb-6">Welcome to DOOSH HUB!</div>
+  <section class="carousel-container">
+    <div id="carousel"></div>
+  </section>
+  <main id="animeList" class="anime-grid"></main>  <script>
     const animeData = {
       "wind-breaker season 1": {
         title: "WIND BREAKER Season 1 in Hindi",
         cover: "InShot_20250427_105208488.jpg",
         link: "anime/windbreakerseason1.html"
       }
-      // add more shows here...
     };
 
     function loadCarousel() {
@@ -127,10 +92,7 @@ header.shrink { background-opacity:90%; padding-top:.5rem; padding-bottom:.5rem;
       Object.values(animeData).forEach(a => {
         const slide = document.createElement('a');
         slide.href = a.link;
-        slide.innerHTML = `
-          <img src="${a.cover}" alt="${a.title}"/>
-          <div class="carousel-caption">${a.title}</div>
-        `;
+        slide.innerHTML = `<img src="${a.cover}" alt="${a.title}"/><div class="carousel-caption">${a.title}</div>`;
         carousel.appendChild(slide);
       });
       const clone = carousel.children[0].cloneNode(true);
@@ -161,10 +123,7 @@ header.shrink { background-opacity:90%; padding-top:.5rem; padding-bottom:.5rem;
         const card = document.createElement('a');
         card.href = a.link;
         card.className = 'anime-card';
-        card.innerHTML = `
-          <img src="${a.cover}" alt="${a.title}"/>
-          <div class="anime-card-title">${a.title}</div>
-        `;
+        card.innerHTML = `<img src="${a.cover}" alt="${a.title}"/><div class="anime-card-title">${a.title}</div>`;
         grid.appendChild(card);
       });
     }
@@ -177,35 +136,41 @@ header.shrink { background-opacity:90%; padding-top:.5rem; padding-bottom:.5rem;
       });
     }
 
-    function scrollToTop(){ window.scrollTo({top:0,behavior:'smooth'}); }
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
     window.onscroll = () => {
-      document.getElementById('scrollToTop').style.display =
-        (window.scrollY > 200) ? 'block' : 'none';
+      document.getElementById('scrollToTop').style.display = (window.scrollY > 200) ? 'block' : 'none';
     };
 
-    /* Popunder logic */
-    let lastAd=0, cooldown=5*60*1000, zones=[9277886,9277883,9277875];
-    function triggerPopunder(){
-      let now=Date.now();
-      if(now-lastAd>cooldown){
-        let z=zones[Math.floor(Math.random()*zones.length)];
-        let s=document.createElement('script');
-        s.src='https://shebudriftaiter.net/tag.min.js';
-        s.setAttribute('data-zone',z);
+    let lastAd = 0, cooldown = 5 * 60 * 1000, zones = [9277886, 9277883, 9277875];
+    function triggerPopunder() {
+      let now = Date.now();
+      if (now - lastAd > cooldown) {
+        let z = zones[Math.floor(Math.random() * zones.length)];
+        let s = document.createElement('script');
+        s.src = 'https://shebudriftaiter.net/tag.min.js';
+        s.setAttribute('data-zone', z);
         document.body.appendChild(s);
-        lastAd=now;
+        lastAd = now;
       }
     }
-    ['click','touchstart'].forEach(e=>document.body.addEventListener(e,triggerPopunder,{once:true}));
-    setInterval(triggerPopunder,10*60*1000);
+    ['click', 'touchstart'].forEach(e => {
+      if (!localStorage.getItem('adShown')) {
+        document.body.addEventListener(e, () => {
+          triggerPopunder();
+          localStorage.setItem('adShown', 'yes');
+        }, { once: true });
+      }
+    });
+    setInterval(triggerPopunder, 10 * 60 * 1000);
 
-    // show loading screen, then initialize app after 5s
     window.onload = () => {
       setTimeout(() => {
-        document.getElementById('loading').style.display = 'none';
-        document.getElementById('app').style.display = 'block';
+        document.getElementById('loader').style.display = 'none';
         loadCarousel();
-        setTimeout(loadAnimeCards, 1000);
+        loadAnimeCards();
         setInterval(autoSlide, 3000);
       }, 5000);
     };
